--- a/style.css
+++ b/style.css
@@ -8,17 +8,28 @@
 
 body {
   font-family: "Roboto", Courier, monospace;
+  height: 100%;
+  background-color: #e5e7eb;
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: 20% 80%;
+  /* display: grid;
+  grid-template-columns: 20% 80%; */
+  display: flex;
   height: 100vh;
+  overflow: hidden;
+  /* justify-content: flex-end; */
 }
 
 .sidebar {
   background-color: #239ff1;
   color: white;
+  height: 100%;
+  flex-shrink: 0;
+  width: 250px;
+  /* position: fixed; */
+  /* width: 20%; */
+  /* display: none; */
 }
 
 .logo-text {
@@ -75,11 +86,14 @@ body {
 
 /* MAIN-CONTENT */
 .main {
-  background-color: white;
-  height: 100%;
-  display: grid;
+  background-color: #e5e7eb;
+  /* display: grid; */
+  width: 100%;
+  height: auto;
   flex: 1;
-  grid-template-rows: 20% 80%;
+  overflow-y: scroll;
+  /* flex: 1; */
+  /* grid-template-rows: 20% 80%; */
 }
 
 .header {
@@ -154,13 +168,14 @@ body {
 .content {
   display: grid;
   background-color: #e5e7eb;
-  grid-template-columns: 70% 30%;
-  height: 100vh; /* Important to keep both sides equal */
+  grid-template-columns: 7fr 3fr;
+  height: auto; /* Important to keep both sides equal */
 }
 
 .cards {
   display: grid;
-  grid-template-columns: 50% 50%;
+  /* grid-template-columns: 50% 50%; */
+  grid-template-columns: 1fr 1fr;
 }
 
 .card {
@@ -169,17 +184,16 @@ body {
   border-left: 5px solid #facc15;
   border-radius: 10px;
   width: 80%;
-  height: 130px;
+  height: 150px;
   margin: 15px 0;
   margin-left: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding-top: 20px;
-  padding-left: 10px;
   box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3); /* Shadow */
   cursor: pointer;
+  padding: 20px;
 }
 
 .card:hover {
@@ -280,6 +294,8 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  color: #737373;
+
   gap: 20px;
   margin-bottom: 20px;
 }
